# PROSUM_BMI

babelizer/: babel_prosum.toml  environment-prosum.yml  sample.toml
bmi/: CMakeLists.txt  bmi_main.f90  bmi_prosum.pc.cmake  bmi_prosumf.f90  bmiprosumf.mod  compile.sh
bmi/_build/: CMakeCache.txt  Makefile  PROSUM_outputs.csv  PROSUM_parameters.csv  PROSUM_parameters_by_plant_bit.csv  PROSUM_time_series_soil_availabilities.csv  bmi_prosum.pc  bmiprosumf.out  cmake_install.cmake  run_bmi_prosum
src/: CMakeCache.txt  CMakeLists.txt  Makefile  PROSUM_main_v0.5.f90  PROSUM_main_v0.5module.c  PROSUM_module_new.F90  PROSUM_module_new2.F90  PROSUM_module_v0.7.F90  PROSUM_outputs.csv  PROSUM_parameters_by_nutrient_element.csv  PROSUM_parameters_by_plant_type.csv  PROSUM_sub_v0.8.f90  PROSUM_time_series_inputs.csv  PROSUM_visualization.py  build_prosum.sh  build_prosum_instruction.md  cmake_install.cmake  install_manifest.txt  prosum_module.mod  readme.md
src/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
